# Plaszyme

./: .gitignore  .gitmodules  LICENSE  PlaszymeDB_v0.2.3.csv  README.md  environment.yml  evaluate_enzyme_only.py  evaluate_testset.py  predict_listwise.py  pyproject.toml  resync.sh  train_catalysis.py  train_dualtower.py  train_gnn_binary.py  train_gnn_classifier.py  train_plastic_ml.py  train_plastic_siamese.py  train_residue_role.py
dataset_pre/: check_pdb.py  download_pdb.py  make_pairs_from_plastic_similarity.py  merge_mcsa_ec.py  qc_pdbs.py
features/: graph_builder.py  sequence_embedder.py  structure_encoder.py
model/: gcn_model.py  layers.py
notebook/: analyze_feature_gradients.py  feature_gradient_importance.csv  plastic_dimreduce.ipynb  plot_upset_venn_per_plastic.py  predict_gnn_binary_0_1.py  train_gnn_binary_0_1.py  train_gnn_multilabel_no_plastic.py  train_siamese.py
notebook/run12/: plastic_distance.csv  plastic_embeddings.csv  plastic_similarity.csv  run_info.txt  siamese_model.pt
notebook/run13/: plastic_distance.csv  plastic_embeddings.csv  plastic_similarity.csv  run_info.txt  siamese_model.pt
notebook/run14/: plastic_distance.csv  (+4 more)
plastic/: plastic_graph_builder.py
predict_scrpt/: predict_listwise.py
result_data/: ML.csv  preds_mlp.csv
scripts/: predict_listwise.py  train_listwise.py
src/: viz_graph.py
test/: test_builder_labeling.py  test_gnn_backbone.py  test_gvp_backbone.py  test_main_chain_mask_vis.py  test_pair.py  test_polymer_tower.py  test_structure_encoder.py
train_script/: train_enzyme_only_multiclass.py  train_listwise.py
utils/: visualization.py
(+242 files in other folders)
